--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="screen" id="game-screen" >
 
         <div class="input-container">
-            <img id="map" src="map.jpg" alt="map of skytrain routes in Vancouver">
+            <img id="map" src="map_no_buses.jpg" alt="map of skytrain routes in Vancouver">
 
             <p id="can-score">Canadaline: 0/17</p>
             <p id="expo-score">Expo Line: 0/21</p>
