--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="input-container">
             <img id="map" src="map_no_buses.jpg" alt="map of skytrain routes in Vancouver">
 
-            <p id="can-score">Canadaline: 0/17</p>
+            <p id="can-score">Canada Line: 0/17</p>
             <p id="expo-score">Expo Line: 0/21</p>
             <p id="mill-score">Millenium Line: 0/16</p>
 
