--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
                 <input id="user-input-19" class="small-input-box"> <!-- granville -->
                 <input id="user-input-20" class="wide-input-box"> <!-- stadium chinatown -->
                 <textarea id="user-input-21" class="tall-input-box"></textarea> <!-- main st -->
-                <textarea id='user-input-22': class="tall-input-box"></textarea> <!-- commercial broadway-->
-                <input id='user-input-23': class="small-input-box"> <!-- nanimo -->
-                <input id='user-input-24': class="small-input-box"> <!-- 29th-->
-                <input id='user-input-25': class="wide-input-box"> <!-- joyce -->
-                <input id='user-input-26': class="small-input-box"> <!-- patt -->
-                <input id='user-input-27': class="small-input-box"> <!-- metrotown -->
-                <textarea id='user-input-28': class="square-input-box"></textarea> <!-- royal oak -->
-                <input id='user-input-29': class="small-input-box"> <!-- edmonds -->
-                <textarea id='user-input-30': class="square-input-box"></textarea> <!-- 22nd -->
-                <input id='user-input-31': class="wide-input-box"> <!-- new west -->
-                <input id='user-input-32': class="small-input-box"> <!-- columbia -->
-                <input id='user-input-33': class="small-input-box"> <!-- sapp-->
-                <input id='user-input-34': class="small-input-box"> <!-- braid -->
-                <input id='user-input-35': class="small-input-box"> <!-- scott -->
-                <input id='user-input-36': class="small-input-box"> <!-- gateway -->
-                <input id='user-input-37': class="wide-input-box"> <!-- surrey cen -->
-                <input id='user-input-38': class="wide-input-box"> <!-- king george -->
+                <textarea id='user-input-22' class="tall-input-box"></textarea> <!-- commercial broadway-->
+                <input id='user-input-23' class="small-input-box"> <!-- nanimo -->
+                <input id='user-input-24' class="small-input-box"> <!-- 29th-->
+                <input id='user-input-25' class="wide-input-box"> <!-- joyce -->
+                <input id='user-input-26' class="small-input-box"> <!-- patt -->
+                <input id='user-input-27' class="small-input-box"> <!-- metrotown -->
+                <textarea id='user-input-28' class="square-input-box"></textarea> <!-- royal oak -->
+                <input id='user-input-29' class="small-input-box"> <!-- edmonds -->
+                <textarea id='user-input-30' class="square-input-box"></textarea> <!-- 22nd -->
+                <input id='user-input-31' class="wide-input-box"> <!-- new west -->
+                <input id='user-input-32' class="small-input-box"> <!-- columbia -->
+                <input id='user-input-33' class="small-input-box"> <!-- sapp-->
+                <input id='user-input-34' class="small-input-box"> <!-- braid -->
+                <input id='user-input-35' class="small-input-box"> <!-- scott -->
+                <input id='user-input-36' class="small-input-box"> <!-- gateway -->
+                <input id='user-input-37' class="wide-input-box"> <!-- surrey cen -->
+                <input id='user-input-38' class="wide-input-box"> <!-- king george -->
             </div>
 
             <div class="input-boxes" id="mill-boxes">
